# rv32i-simulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile.sh
include/: Assembly.hpp  riscv-emu.hpp
src/: CMakeLists.txt  init.cpp  main.cpp  parse.cpp  readfile.cpp
test/: CMakeLists.txt  testcase.cpp
tmp/: test.c  test.s
